--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -9,5 +9,18 @@ jobs:
       with:
         ruby-version: jruby-9.2 
         bundler-cache: true 
-    - run: bundle exec rspec
+    - name: Ruby rspec tests
+      run: bundle exec rspec
+    -
+      name: Set up Docker Buildx
+      uses: docker/setup-buildx-action@v1
+    -
+      name: Copy plugin gem to workdir
+      run: cp `bundle info logstash-filter-csharp --path` .
+    -
+      name: Install in logstash
+      uses: docker/build-push-action@v2
+      with:
+        context: .
+        file: ./Dockerfile
 
